--- a/app/client/css/style.css
+++ b/app/client/css/style.css
@@ -6,3 +6,63 @@
     -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
 }
+
+.btn-editor {
+  background-color: hsl(214, 82%, 15%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#247ae9", endColorstr="#062245");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#247ae9), to(#062245));
+  background-image: -moz-linear-gradient(top, #247ae9, #062245);
+  background-image: -ms-linear-gradient(top, #247ae9, #062245);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #247ae9), color-stop(100%, #062245));
+  background-image: -webkit-linear-gradient(top, #247ae9, #062245);
+  background-image: -o-linear-gradient(top, #247ae9, #062245);
+  background-image: linear-gradient(#247ae9, #062245);
+  border-color: #062245 #062245 hsl(214, 82%, 5.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.62);
+  -webkit-font-smoothing: antialiased;
+}
+
+.btn-label {
+  position: relative;
+  left: -12px;
+  display: inline-block;
+  padding: 6px 12px;background:
+  rgba(0,0,0,0.15);
+  border-radius: 3px 0 0 3px;
+}
+
+.btn-labeled {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+#player {
+  width:100%;
+}
+
+.left {
+  float:left;
+}
+
+.editor_timing_input {
+  width:65px;
+}
+
+#character_cutoff {
+    padding: 8px;
+    display: inline-block;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border: 2px solid #dce4ec;
+}
+
+.editor_text {
+    height:100px;
+    padding: 10px 10px 5px 5px;
+    margin: 0 auto;
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
+}
