--- a/app/client/css/style.css
+++ b/app/client/css/style.css
@@ -46,16 +46,17 @@
   float:left;
 }
 
+.right {
+  float:right;
+}
+
 #timer_button {
   width:90%;
 }
 
 #character_cutoff {
-    padding: 2px;
     display: inline-block;
-    -webkit-border-radius: 6px;
-    border-radius: 6px;
-    border: 2px solid #dce4ec;
+    float:right;
 }
 
 .editor_text {
@@ -66,6 +67,14 @@
     -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.editor_text_post {
+    overflow: auto;
+    max-height: 125px;;
+    height: auto;
+    padding: 10px 10px 5px 5px;
+    margin: 0 auto;
 }
 
 .box_title {
