--- a/app/client/views/base.html
+++ b/app/client/views/base.html
@@ -1,11 +1,13 @@
 <template name="base">
   <div id="secondary" class="col-sm-3 sidebar" style="display: none;">
     <aside>
-      <div class="about">
-        <h4>{{loginButtons}}</h4>
-          {{#if hasEditorPermission}}
-            <a href="{{urlFor 'editor'}}">Editor</a>
-          {{/if}}
+      <div class="tags">
+        <ul>
+          {{accountButtons}}
+        </ul>
+        {{#if hasEditorPermission}}
+          <a href="{{urlFor 'editor'}}">Editor</a>
+        {{/if}}
       </div>
     </aside>
   </div> <!-- /#secondary -->
