--- a/app/client/views/queue/queue.html
+++ b/app/client/views/queue/queue.html
@@ -12,7 +12,8 @@
       <div class="col-md-8">
         <ul>
           {{#each episodes}}
-          <li><a href="{{pathFor 'editor'}}">{{name}}</a></li>
+          <li><a href="{{pathFor 'editor'}}">{{name}}</a>
+          </li>
           {{/each}}
         </ul>
       </div>
