--- a/app/client/views/base.html
+++ b/app/client/views/base.html
@@ -2,15 +2,17 @@
   <div id="secondary" class="col-sm-3 sidebar" style="display: none;">
     <aside>
       <div class="tags">
+        <h4>Account</h4>
         <ul>
           {{accountButtons}}
         </ul>
         {{#if hasEditorPermission}}
-          <a href="{{urlFor 'editor'}}">Editor</a>
+        <a href="{{urlFor 'editor'}}">Editor</a>
         {{/if}}
       </div>
     </aside>
-  </div> <!-- /#secondary -->
+  </div>
+  <!-- /#secondary -->
 
   <div id="primary" class="col-sm-12">
     <div class="content">
@@ -25,15 +27,18 @@
         <div id="togglesidebar" class="btn btn-primary pull-right">
           <i class="fa fa-bars"></i>
         </div>
-      </header> <!-- /header -->
+      </header>
+      <!-- /header -->
       <div class="entry-description">
         {{yield}}
       </div>
       <footer class="footer">
         <p>© Timelined 2014.</p>
-      </footer> <!-- /footer -->
+      </footer>
+      <!-- /footer -->
     </div>
-  </div> <!-- /#primary -->
+  </div>
+  <!-- /#primary -->
 </template>
 
 <template name="notFound">
