router and base: added support for yielding into secondary

--- a/app/client/views/base.html
+++ b/app/client/views/base.html
@@ -7,6 +7,7 @@
             <a href="{{urlFor 'editor'}}">Editor</a>
           {{/if}}
       </div>
+      {{yield 'secondary'}}
     </aside>
   </div> <!-- /#secondary -->
 
