home/viewer/player/editor: templates and js. mostly around the user viewer

--- a/app/client/views/editor/editor.html
+++ b/app/client/views/editor/editor.html
@@ -93,13 +93,21 @@
 
 <template name="episode_title">
   <div class="row"><hr /></div>
-  <div class="row" style="max-height:39px">
-      <h4 class="left">{{episode.name}}</h4>
-      <h4 class="left" style="margin-left: 10px; margin-right: 10px; text-align: center; font-size: 18px;">from</h4>
-      <h4 class="left">{{show.name}} {{episode.number}}</h4>
-      {{#if editingPermission}}
+  <div class="row" style="max-height:39px;">
+    {{#if editingPermission}}
+    <div class="col-md-9" style="padding-left:0px" id="title_div">
+    {{/if}}
+
+      <h4 class="left resizeMe">{{episode.name}}</h4>
+      <h4 class="left resizeMe" style="margin-left: 10px; margin-right: 10px; text-align: center;">from</h4>
+      <h4 class="left resizeMe">{{show.name}} {{episode.number}}</h4>
+
+    {{#if editingPermission}}
+    </div>
+    <div class="col-md-3" style="padding-right:0px">
       <button style="min-width:119px" class="btn btn-primary right" id="submit_episode" href="#">Submit Episode</button>
-      {{/if}}
+    </div>
+    {{/if}}
   </div>
   <div class="row"><hr /></div>
 </template>
