--- a/app/client/views/player/player.html
+++ b/app/client/views/player/player.html
@@ -6,6 +6,6 @@
 
 <template name="view_player">
   <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" width="auto" height="85">
-    <source src="{{this.s3}}" type="audio/mp3"></source>
+    <source src="{{this.episode.s3}}" type="audio/mp3"></source>
   </video>
 </template>
