--- a/app/client/stylesheets/style.css
+++ b/app/client/stylesheets/style.css
@@ -61,7 +61,7 @@
 
 .editor_text {
     overflow: auto;
-    height: 115px;;
+    height: 95px;
     padding: 10px 10px 5px 5px;
     margin: 0 auto;
     -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
@@ -94,4 +94,11 @@ hr.style-two {
     background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
     background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
     background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+}
+
+.reset_button {
+    width:79px;
+    cursor:pointer;
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
 }
