queue: fixed bug that didn't let you claim anything but the first episode

--- a/app/client/views/queue/queue.html
+++ b/app/client/views/queue/queue.html
@@ -21,7 +21,7 @@
             <div class="row">
 
               {{#if is_unclaimed}}
-              <button class="btn btn-primary btn-xs right" id="claim_episode" href="#">Claim Episode</button>
+              <button class="btn btn-primary btn-xs right claim_episode">Claim Episode</button>
               {{/if}}
 
               {{#if is_claimed}}
@@ -29,7 +29,7 @@
               {{/if}}
 
               {{#if is_claimer}}
-              <button class="btn btn-primary btn-xs right" id="unclaim_episode">Unclaim Episode</button>
+              <button class="btn btn-primary btn-xs right unclaim_episode">Unclaim Episode</button>
               {{/if}}
 
             </div>
