glyphicons: fixed by putting the fonts in the right place, switched <i> to <span>, and took the <a> off of the <span>

--- a/client/views/editor/editor.html
+++ b/client/views/editor/editor.html
@@ -165,7 +165,8 @@
 </template>
 
 <template name="clip_link">
-  <a class="btn-small remove_link" href="#" url=""><i class="glyphicon glyphicon-remove"></i></a>
+  <span class="glyphicon glyphicon-remove"></span>
+<!--   <a class="btn-small remove_link" href="#" url=""><span class="glyphicon glyphicon-remove"></span></a> -->
   <a href="{{url}}"><span>{{text}}</span></a>
 </template>
 
