changed skip interval to 5 seconds, dropped 60 sec skips, remapped shortcuts to ctrl keys: 'space , . 1 2', removed Keybindings upon rendering in case they were sticking around to test theory, removed atmosphere meteor-keybindings package and installed it as a local package with updated jwerty.js from 0.3.0 to 0.3.2 (submitted pull request to meteor-keybindings project)

--- a/client/views/base.html
+++ b/client/views/base.html
@@ -7,7 +7,7 @@
           {{accountButtons}}
         </ul>
         {{#if user_is_editor}}
-        <a href="{{urlFor 'queue'}}">Editor Queue</a>
+        <a href="{{pathFor 'queue'}}">Editor Queue</a>
         {{/if}}
       </div>
       {{yield 'secondary'}}
