added hotkey to notes, link url/title and add link, renamed notes field from text to notes

--- a/client/views/editor/editor.html
+++ b/client/views/editor/editor.html
@@ -145,7 +145,7 @@
 <template name="editor_notes">
   <small class="box_title">Notes</small>
   {{>character_cutoff}}
-  <div id="text" class="editor_text" contenteditable="true"></div>
+  <div id="notes" class="editor_text" contenteditable="true"></div>
 </template>
 
 <template name="editor_link_input">
