--- a/client/views/base.html
+++ b/client/views/base.html
@@ -2,9 +2,9 @@
   <div id="secondary" class="col-sm-3 sidebar" style="display: none;">
     <aside>
       <div class="tags">
-        <h4>Account</h4>
+        <h4>Goto</h4>
         <ul>
-          {{accountButtons}}
+          <h5>{{accountButtons}}</h5>
         </ul>
         {{#if user_is_editor}}
           <p><a href="{{pathFor 'queue'}}">Editor Queue</a></p>
@@ -14,6 +14,22 @@
         {{/if}}
       </div>
       {{yield 'secondary'}}
+
+      {{#if user_is_editor}}
+      <h4>Hotkeys</h4>
+      <ul>
+        <li>CTRL + SPACE => Play/Pause</li>
+        <li>CTRL + , => Skip back 5s</li>
+        <li>CTRL + . => Skip forward 5s</li>
+        <li>CTRL + 1 => Set Start time</li>
+        <li>CTRL + 2 => Set End time</li>
+        <li>CTRL + 3 => Jump to Notes</li>
+        <li>CTRL + 4 => Jump to Link URL</li>
+        <li>CTRL + 5 => Jump to Link Title</li>
+        <li>CTRL + 6 => Add Link</li>
+      </ul>
+      <h4><a href="">Editor FAQ</a></h4>
+      {{/if}}
     </aside>
   </div>
   <!-- /#secondary -->
