added submit clip hotkey

--- a/client/views/base.html
+++ b/client/views/base.html
@@ -27,6 +27,7 @@
         <li>CTRL + 4 => Jump to Link URL</li>
         <li>CTRL + 5 => Jump to Link Title</li>
         <li>CTRL + 6 => Add Link</li>
+        <li>CTRL + RETURN => Record Clip</li>
       </ul>
       <h4><a href="">Editor FAQ</a></h4>
       {{/if}}
