--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -1,7 +1,10 @@
 <template name="queue">
   <section class="post">
     <div class="row">
-      <h3>Welcome to the Queue</h3>
+      <h3>Episode Queue</h3>
+      <p>
+      Greetings Timelined Editor! Below is our list of oustanding episodes waiting for your magic touch. Claim an episode and click the title to begin your work. You'll be taken to the Editor page for the episode, where you can slice and dice clips to your heart's content. When claimed, only you can work on episode. If for some reason you cannot complete an episode, remember to unclaim it so somebody else can grab it. <a href="/">Let us know</a> if you have any questions. Happy timelining!
+      </p>
     </div>
     {{#each shows}}
     <hr>
