extracted skip functionality to global_skip_player, wired up back/forward buttons in addition to hotkeys in editor, notice a performance hit on button clicks for skip

--- a/client/views/editor/editor.html
+++ b/client/views/editor/editor.html
@@ -50,12 +50,12 @@
 
       <div class="col-md-2" style="position:relative" id="editor_start_back_parent">
         {{> editor_timing_input start_timing}}
-        {{> editor_skip_button  rewind}}
+        {{> editor_skip_button  skip_back}}
       </div>
 
       <div class="col-md-2" style="position:relative" id="editor_end_forward_parent">
         {{> editor_timing_input end_timing}}
-        {{> editor_skip_button  skip}}
+        {{> editor_skip_button  skip_forward}}
       </div>
 
       <div class="col-md-4" style="padding-right:0px">
